tests/contextual_typing/contextual_typing.exp
Error -------------------------------------------------------------------------------- immediate_call_expression.js:6:10

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   immediate_call_expression.js:6:10
   6|         (x: string); // error number ~> string
               ^

References:
   immediate_call_expression.js:3:10
   3| const x: number => void = (function () {
               ^^^^^^ [1]
   immediate_call_expression.js:6:13
   6|         (x: string); // error number ~> string
                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------- implicit_instantiation.js:16:49

Cannot cast `a` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   implicit_instantiation.js:16:49
   16|   const reasonTest: (string) => mixed = (a) => (a: empty); // ok
                                                       ^

References:
   implicit_instantiation.js:16:22
   16|   const reasonTest: (string) => mixed = (a) => (a: empty); // ok
                            ^^^^^^ [1]
   implicit_instantiation.js:16:52
   16|   const reasonTest: (string) => mixed = (a) => (a: empty); // ok
                                                          ^^^^^ [2]


Error ---------------------------------------------------------------------------------- implicit_instantiation.js:62:39

Cannot assign `z3.concat(...)` to `z5` because number [1] is incompatible with string [2] in array element.
[incompatible-type]

   implicit_instantiation.js:62:39
   62|   const z5: Array<string> = z3.concat(1); // Only one error on 1 ~> string
                                             ^ [1]

References:
   implicit_instantiation.js:62:19
   62|   const z5: Array<string> = z3.concat(1); // Only one error on 1 ~> string
                         ^^^^^^ [2]


Error --------------------------------------------------------------------------------- implicit_instantiation.js:106:19

Cannot call `f` with empty string bound to the third parameter because string [1] is incompatible with number [2].
[incompatible-call]

   implicit_instantiation.js:106:19
   106|   f(3, (n) => {}, ""); // Error on third argument, but n can still be contextually typed.
                          ^^ [1]

References:
   implicit_instantiation.js:105:37
   105|   declare function f<A>(A, A=>void, number): void;
                                            ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- intersections.js:9:24

Cannot cast `x` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   intersections.js:9:24
   9|   foo('str', (x) => { (x: number); }); // error
                             ^

References:
   intersections.js:5:44
   5|   declare function foo(tag: 'str', cb: (x: string) => void): void;
                                                 ^^^^^^ [1]
   intersections.js:9:27
   9|   foo('str', (x) => { (x: number); }); // error
                                ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- intersections.js:10:3

Cannot call `foo` because: [incompatible-call]
 - Either string [1] is incompatible with string literal `bool` [2].
 - Or string [1] is incompatible with string literal `str` [3].
 - Or string [1] is incompatible with string literal `num` [4].

   intersections.js:10:3
   10|   foo('a', (x) => { (x: number); }); // error
         ^^^

References:
   intersections.js:10:7
   10|   foo('a', (x) => { (x: number); }); // error
             ^^^ [1]
   intersections.js:4:29
    4|   declare function foo(tag: 'bool', cb: (x: boolean) => void): void;
                                   ^^^^^^ [2]
   intersections.js:5:29
    5|   declare function foo(tag: 'str', cb: (x: string) => void): void;
                                   ^^^^^ [3]
   intersections.js:6:29
    6|   declare function foo(tag: 'num', cb: (x: number) => void): void;
                                   ^^^^^ [4]


Error ------------------------------------------------------------------------------------------- intersections.js:10:13

An annotation on `x` is required because Flow cannot infer its type from local context. [missing-local-annot]

   10|   foo('a', (x) => { (x: number); }); // error
                   ^


Error ------------------------------------------------------------------------------------------- intersections.js:22:24

Cannot cast `x` to string because object type [1] is incompatible with string [2]. [incompatible-cast]

   intersections.js:22:24
   22|   foo('obj', (x) => { (x: string); }); // error
                              ^

References:
   intersections.js:17:33
   17|   type O = (tag: 'obj', cb: (x: {}) => void) => void;
                                       ^^ [1]
   intersections.js:22:27
   22|   foo('obj', (x) => { (x: string); }); // error
                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- intersections.js:27:24

Cannot cast `x` to string because object type [1] is incompatible with string [2]. [incompatible-cast]

   intersections.js:27:24
   27|   bar('obj', (x) => { (x: string); }); // error
                              ^

References:
   intersections.js:17:33
   17|   type O = (tag: 'obj', cb: (x: {}) => void) => void;
                                       ^^ [1]
   intersections.js:27:27
   27|   bar('obj', (x) => { (x: string); }); // error
                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- intersections.js:30:25

Cannot cast `x` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   intersections.js:30:25
   30|   bak('bool', (x) => { (x: boolean); }); // error in cast (ideally would pick the right overload)
                               ^

References:
   intersections.js:15:33
   15|   type S = (tag: 'str', cb: (x: string) => void) => void;
                                       ^^^^^^ [1]
   intersections.js:30:28
   30|   bak('bool', (x) => { (x: boolean); }); // error in cast (ideally would pick the right overload)
                                  ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- intersections.js:30:25

Cannot cast `x` to boolean because number [1] is incompatible with boolean [2]. [incompatible-cast]

   intersections.js:30:25
   30|   bak('bool', (x) => { (x: boolean); }); // error in cast (ideally would pick the right overload)
                               ^

References:
   intersections.js:16:33
   16|   type N = (tag: 'num', cb: (x: number) => void) => void;
                                       ^^^^^^ [1]
   intersections.js:30:28
   30|   bak('bool', (x) => { (x: boolean); }); // error in cast (ideally would pick the right overload)
                                  ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- intersections.js:31:25

Cannot cast `x` to string because boolean [1] is incompatible with string [2]. [incompatible-cast]

   intersections.js:31:25
   31|   bak('bool', (x) => { (x: string); }); // error in cast (ideally would pick the right overload)
                               ^

References:
   intersections.js:14:34
   14|   type B = (tag: 'bool', cb: (x: boolean) => void) => void;
                                        ^^^^^^^ [1]
   intersections.js:31:28
   31|   bak('bool', (x) => { (x: string); }); // error in cast (ideally would pick the right overload)
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- intersections.js:31:25

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   intersections.js:31:25
   31|   bak('bool', (x) => { (x: string); }); // error in cast (ideally would pick the right overload)
                               ^

References:
   intersections.js:16:33
   16|   type N = (tag: 'num', cb: (x: number) => void) => void;
                                       ^^^^^^ [1]
   intersections.js:31:28
   31|   bak('bool', (x) => { (x: string); }); // error in cast (ideally would pick the right overload)
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ lits.js:3:5

Cannot determine type of empty array literal. Please provide an annotation. [missing-empty-array-annot]

   3| let h = []; // err
          ^


Error ----------------------------------------------------------------------------------------------------- lits.js:8:19

Cannot assign array literal to `u` because empty array literal [1] has an arity of 0 but tuple type [2] has an arity of
1. [invalid-tuple-arity]

   lits.js:8:19
   8| let u: [number] = []; // err
                        ^^ [1]

References:
   lits.js:8:8
   8| let u: [number] = []; // err
             ^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------ sentinel_refinements.js:52:43

Cannot cast `v` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   sentinel_refinements.js:52:43
   52| const e2: F = { __type__: a(), f: (v) => (v: string) }; // error
                                                 ^

References:
   sentinel_refinements.js:8:80
    8| type F = { __type__: 'a', f: (v: string) => string } | { __type__: 'b', f: (v: number) => number };
                                                                                      ^^^^^^ [1]
   sentinel_refinements.js:52:46
   52| const e2: F = { __type__: a(), f: (v) => (v: string) }; // error
                                                    ^^^^^^ [2]


Error ------------------------------------------------------------------------------------ sentinel_refinements.js:54:38

Cannot cast `v` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   sentinel_refinements.js:54:38
   54| <CompFProp __type__={a()} f={(v) => (v: string)} />; // error
                                            ^

References:
   sentinel_refinements.js:8:80
    8| type F = { __type__: 'a', f: (v: string) => string } | { __type__: 'b', f: (v: number) => number };
                                                                                      ^^^^^^ [1]
   sentinel_refinements.js:54:41
   54| <CompFProp __type__={a()} f={(v) => (v: string)} />; // error
                                               ^^^^^^ [2]



Found 17 errors
